# statistics-for-regression-monkey

./: .gitignore  .nojekyll  _quarto.yml  index.html  index.qmd  intro.html  pyproject.toml  references.bib  references.html  requirements.txt  robots.txt  search.json  sitemap.xml  summary.html
.github/ISSUE_TEMPLATE/: bug_report.yml  enhance.yml  question.yml
.github/workflows/: publish.yml
docs/: tips.md
include/: custom.scss  custom_section.html  custom_webfont.html  dark.scss  setup_googletagmanager.html  setup_googletagmanager_body.html
index/: index.html  introduction.html
posts/ExplanatoryDataAnalysis/: chapter_header.html  chapter_header.qmd  gini_coefficient.html  gini_coefficient.qmd
posts/SHT/: chapter_header.html  chapter_header.qmd  fisher_vs_neyman_pearson.html
posts/bayesian_estimation/: bayesian_linear_regression.html  bayesian_linear_regression.qmd  chapter_header.html  chapter_header.qmd
posts/econometrics101/: chapter_header.html  chapter_header.qmd
posts/estimation/: chapter_header.html  chapter_header.qmd  m-estimator.html  m-estimator.qmd  method-of-moments.html  method-of-moments.qmd  unbiased_estimator.html  unbiased_estimator.qmd
posts/introduction/: chapter_header.html  chapter_header.qmd  intro.html
posts/mathematical_appendix/: Lhopitals_rule.html  Lhopitals_rule.qmd  beta_function.html  beta_function.qmd  chapter_header.html  chapter_header.qmd  complex_number.html  complex_number.qmd  gamma_function.html  gamma_function.qmd  jensen_inequality.html  jensen_inequality.qmd  permutation_combination.html  taylor_series.html  (+2 more)
(+69 files in other folders)
