[tool.poetry]
name = "statistics-for-regression-monkey"
version = "0.1.0"
description = ""
authors = ["RyoNak <nakagamiryo0901@gmail.com>"]
license = "MIT"
readme = "README.md" 
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.12"
ipykernel = "^6.29.5"
plotly = "^5.22.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
