[tool.poetry]
name = "statistics-for-regression-monkey"
version = "0.1.0"
description = ""
authors = ["RyoNak <nakagamiryo0901@gmail.com>"]
license = "MIT"
readme = "README.md" 
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.12"
ipykernel = "^6.29.5"
plotly = "^5.22.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
statsmodels = "^0.14.2"
polars = "^1.6.0"
altair = "^5.4.1"
pyarrow = "^17.0.0"
sympy = "^1.13.3"
html5lib = "^1.1"
scikit-learn-extra = "^0.3.0"
regmonkey-style = "^1.4.0"
jax = "^0.4.34"
numpyro = "^0.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
